# EdgeVoiceRag

./: .gitignore  CMakeLists.txt  README.md
config/: app.conf  dev.conf  python_zmq.conf  zmq.conf
docs/: vehicle_manual.txt
include/: app_config.h  command_line_options.h  logger.h  perf_timer.h  query_router.h  rag_client_zmq.h  rag_engine.h  rag_response_parser.h
python/: requirements.txt
python/rag/: build_index.py  check_env.py  debug_tokenize.py  llm_generator.py  python_rag_server.py  search.py  test_llm_generator.py  test_voice_io.py  tfidf_search.py  user_dict.txt  voice_io.py  voice_pipeline.py
python/tests/: test_voice_io.py  test_voice_pipeline.py
scripts/: build_python_index.sh  check_ollama.sh  check_python_env.sh  run_python_rag_server.sh  run_python_rag_server_debug.sh  run_python_rag_server_ollama.sh  run_voice_pipeline_mock.sh  search_python_json.sh  search_python_tfidf.sh  test_cpp_python_zmq_backend.sh  test_mock_llm.sh  test_ollama_manual.sh  test_once_queries.sh  test_python_json_search.sh  test_python_rag_server.sh  test_python_rag_server_debug_prompt.sh  test_python_tfidf.sh  test_voice_io.sh  test_voice_pipeline_mock.sh  test_zmq_backend.sh
src/: app_config.cpp  command_line_options.cpp  logger.cpp  main.cpp  perf_timer.cpp  query_router.cpp  rag_client.cpp  rag_client_zmq.cpp  rag_engine.cpp  rag_response_parser.cpp  rag_server.cpp  zmq_rep_server.cpp  zmq_req_client.cpp
tests/: unit_tests.cpp
